--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "develop": "nodemon server.js",
+    "develop": "nodemon -e js,ejs,html server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "private": true,
